--- a/BattleshipTests/BattleshipTests.csproj
+++ b/BattleshipTests/BattleshipTests.csproj
@@ -12,4 +12,8 @@
       <PackageReference Include="Shouldly" Version="4.0.3" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\BattleshipGame\BattleshipGame.csproj" />
+    </ItemGroup>
+
 </Project>
