--- a/BattleshipTests/BattleshipTests.csproj
+++ b/BattleshipTests/BattleshipTests.csproj
@@ -10,6 +10,7 @@
       <PackageReference Include="ApprovalTests" Version="5.7.3" />
       <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
       <PackageReference Include="NUnit" Version="3.13.3" />
+      <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
       <PackageReference Include="Shouldly" Version="4.0.3" />
       <PackageReference Include="Spectre.Console" Version="0.44.0" />
       <PackageReference Include="Spectre.Console.Testing" Version="0.44.0" />
